test/error/MethodParamDefaultNonConst.fu
public static class Test
{
	public static void Run(int[]# arr = new int[10]) //ERROR: Expected constant value
	{
	}
}
